<resources>
    <string name="app_name" translatable="false">Learn aChord</string>
    <string name="language_id">-1</string>
    <string name="options">Options</string>
    <string name="reset_options">Reset options</string>
    <string name="quiz">Quiz</string>
    <string name="interval_cista_prima">P1</string>
    <string name="interval_mala_sekunda">m2</string>
    <string name="interval_velika_sekunda">M2</string>
    <string name="interval_mala_terca">m3</string>
    <string name="interval_velika_terca">M3</string>
    <string name="interval_cista_kvarta">P4</string>
    <string name="interval_povecana_kvarta">A4</string>
    <string name="interval_smanjena_kvinta">d5</string>
    <string name="interval_cista_kvinta">P5</string>
    <string name="interval_mala_seksta">m6</string>
    <string name="interval_velika_seksta">M6</string>
    <string name="interval_mala_septima">m7</string>
    <string name="interval_velika_septima">M7</string>
    <string name="interval_cista_oktava">P8</string>
    <string name="interval_mala_nona">m9</string>
    <string name="interval_velika_nona">M9</string>
    <string name="interval_mala_decima">m10</string>
    <string name="interval_velika_decima">M10</string>
    <string name="interval_cista_undecima">P11</string>
    <string name="interval_povecana_undecima">A11</string>
    <string name="interval_smanjena_duodecima">d12</string>
    <string name="interval_cista_duodecima">P12</string>
    <string name="interval_mala_tercdecima">m13</string>
    <string name="interval_velika_tercdecima">M13</string>
    <string name="interval_mala_kvartdecima">m14</string>
    <string name="interval_velika_kvartdecima">M14</string>
    <string name="interval_cista_kvintdecima">P15</string>
    <string name="chord_durski">M</string>
    <string name="chord_molski">m</string>
    <string name="chord_smanjeni_kvintakord">dim</string>
    <string name="chord_povecani">aug</string>
    <string name="chord_dominantni"></string>
    <string name="chord_veliki_durski">maj</string>
    <string name="chord_mali_molski">min</string>
    <string name="chord_mali_smanjeni">hdim</string>
    <string name="chord_veliki_molski">mM</string>
    <string name="chord_veliki_povecani">aug</string>
    <string name="chord_smanjeni_septakord">dim</string>
    <string name="chord_veliki_dominantni"></string>
    <string name="chord_mali_durski_nonakord"></string>
    <string name="chord_mali_molski_nonakord">min</string>
    <string name="chord_veliki_durski_nonakord">maj</string>
    <string name="settings_intervals">Intervals:</string>
    <string name="settings_chords">Chords:</string>
    <string name="no_checked_intervals_error">There is no selected interval or chord</string>
    <string name="no_intervals_inside_borders">Playing range is too small to play selected intervals and chords</string>
    <string name="key_borders_are_too_small">Playing range is too small</string>
    <string name="not_enough_selected_intervals_or_chords_error">There is not enough selected intervals and chords</string>
    <string name="play_or_stop_button_content_description">Play/stop button</string>
    <string name="open_quiz_button_content_description">Open quiz button</string>
    <string name="start_quiz_button_content_description">Start quiz button</string>
    <string name="pause_quiz_button_content_description">Pause quiz button</string>
    <string name="quiz_submit_answer_content_description">Submit answer button</string>
    <string name="quiz_correct_answer_content_description">Correct button</string>
    <string name="quiz_wrong_answer_content_description">Wrong button</string>
    <string name="play_lower_key_bound_content_description">Play low key border key</string>
    <string name="play_upper_key_bound_content_description">Play high key border key</string>
    <string name="settings_0_title">Intervals</string>
    <string name="settings_1_title">Chords</string>
    <string name="settings_2_title">Tones</string>
    <string name="settings_3_title">Settings</string>
    <string name="playing_type">Playing mode</string>
    <string name="direction_up">Ascending</string>
    <string name="direction_down">Descending</string>
    <string name="direction_simultaneously">Simultaneously</string>
    <string name="second_sound_delay">Each tone duration</string>
    <string name="between_chord_delay">Delay between intervals/chords</string>
    <string name="second">s</string>
    <string name="second_sound_delay_default_hint" translatable="false">0.00</string>
    <string name="language">Language</string>
    <string name="select_tones_range">Playing range</string>
    <string name="choose_colors">Choose colors</string>
    <string name="update_to_pro_remove_ads">Remove ads</string>
    <string name="range">Range</string>
    <string name="range_keys_separator" translatable="false">-</string>
    <string name="show_progress_bar">Show progress circle</string>
    <string name="show_what_intervals">Show chord\'s intervals</string>
    <string name="chord_text_size">Text size</string>
    <string name="dark_mode">App theme</string>
    <string name="reminder_interval">Reminder</string>
    <string name="question_mark" translatable="false">\?</string>
    <string name="play_what_tone">Tone</string>
    <string name="play_what_octave">Octave</string>
    <string name="direction_explanation_dialog">Random mode randomly plays intervals and chords in one of the selected playing modes.\n
    Custom mode plays intervals and chords in all selected modes by order (top to bottom).\n
    To change order press and hold on one of the modes and choose action.</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="random">Random</string>
    <string name="custom">Custom</string>
    <string name="dark_mode_auto">Auto</string>
    <string name="dark_mode_light">Light</string>
    <string name="dark_mode_dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="small">Small</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="never">Never</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="custom_reminder_time_interval">Custom</string>
    <string name="settings_warning_dialogs_title">Error</string>
    <string name="all_directions_unchecked_error">None of the playing directions are selected! Playing won\'t be possible.</string>
    <string name="all_intervals_and_chords_unchecked_error">None of the intervals or chords are selected! Playing won\'t be possible.</string>
    <string name="too_small_range_error">Selected range is too small for some intervals or chords! Unplayable intervals and chords will be unselected</string>
    <string name="no_checked_playing_type_error">There is no selected playing type</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="menu_help_more_details">Help</string>
    <string name="quiz_menu_reset_mode_one">Reset easy high score</string>
    <string name="quiz_menu_reset_mode_two">Reset medium high score</string>
    <string name="quiz_menu_reset_mode_three">Reset hard high score</string>
    <string name="quiz_mode_one_title">Easy</string>
    <string name="quiz_mode_two_title">Medium</string>
    <string name="quiz_mode_three_title">Hard</string>
    <string name="highscore">High Score</string>
    <string name="quiz_mode_title_separator" translatable="false">:&#160;</string>
    <string name="quiz_game_over_message">Wrong answer</string>
    <string name="quiz_game_over_correct_answer_is">Correct answer:</string>
    <string name="quiz_game_over_score_text">Score:</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="quiz_mode_two_option_one_title">a)</string>
    <string name="quiz_mode_two_option_two_title">b)</string>
    <string name="quiz_mode_two_option_three_title">c)</string>
    <string name="quiz_mode_two_option_four_title">d)</string>
    <string name="quiz_explanation_dialog_title">Quiz</string>
    <string name="quiz_explanation_dialog_text">Easy quiz mode plays one interval, chord or tone and displays another one.
        Then, you need to determine weather they are same.\n
        Medium mode plays one interval, chord or tone and displays four of them. You need to choose the right one (the one that has been played).\n
        In hard mode, you need to select exactly what has been played.\n
        Only intervals and chords that are selected in settings will be played or displayed. If you selected tones you will be asked what tone is playing.
        If you selected just octave you will be asked in what octave that tone is.</string>
    <string name="quiz_reset_mode_one_highscore_message">Current high score for easy quiz will be deleted. Continue anyway?</string>
    <string name="quiz_reset_mode_two_highscore_message">Current high score for medium quiz will be deleted. Continue anyway?</string>
    <string name="quiz_reset_mode_three_highscore_message">Current high score for hard quiz will be deleted. Continue anyway?</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="c">"c"</string>
    <string name="cis">"c#"</string>
    <string name="d">"d"</string>
    <string name="dis">"d#"</string>
    <string name="e">"e"</string>
    <string name="f">"f"</string>
    <string name="fis">"f#"</string>
    <string name="g">"g"</string>
    <string name="gis">"g#"</string>
    <string name="a">"a"</string>
    <string name="ais">"a#"</string>
    <string name="h">"b"</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder_text">Practice makes perfect</string>
    <string name="user_profile_activity_label">Profile</string>
    <string name="action_user_profile_title">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="achievement_progress_label">Your progress:</string>
    <string name="firestore_achievement_progress_document_name" translatable="false">AchievementProgress</string>
    <string name="firestore_high_score_document_name" translatable="false">HighScore</string>
    <string name="achievement_description_under_octave_easy">Easy quiz - all intervals inside one octave</string>
    <string name="achievement_description_under_octave_medium">Medium quiz - all intervals inside one octave</string>
    <string name="achievement_description_under_octave_hard">Hard quiz - all intervals inside one octave</string>
    <string name="achievement_description_all_intervals_easy">Easy quiz - all intervals</string>
    <string name="achievement_description_all_intervals_medium">Medium quiz - all intervals</string>
    <string name="achievement_description_all_intervals_hard">Hard quiz - all intervals</string>
    <string name="achievement_description_triads_easy">Easy quiz - all triads and their inversions</string>
    <string name="achievement_description_triads_medium">Medium quiz - all triads and their inversions</string>
    <string name="achievement_description_triads_hard">Hard quiz - all triads and their inversions</string>
    <string name="achievement_description_all_chords_easy">Easy quiz - all chords</string>
    <string name="achievement_description_all_chords_medium">Medium quiz - all chords</string>
    <string name="achievement_description_all_chords_hard">Hard quiz - all chords</string>
    <string name="achievement_description_all_intervals_and_chords_easy">Easy quiz - all intervals and chords</string>
</resources>