<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".quiz.ChooseQuizModeActivity">

    <item
        android:id="@+id/action_more_info"
        android:title="@string/menu_help_more_details"
        android:icon="@drawable/ic_info_light"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reset_mode_one"
        android:title="@string/quiz_menu_reset_mode_one"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_mode_two"
        android:title="@string/quiz_menu_reset_mode_two"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_mode_three"
        android:title="@string/quiz_menu_reset_mode_three"
        app:showAsAction="never"/>


</menu>