<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_more_info"
        android:title="@string/menu_help_more_details"
        android:icon="@drawable/ic_info_dark"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_user_profile"
        android:title="@string/action_user_profile_title"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_options"
        android:title="@string/options"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>


</menu>