<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quizBackgroundColor"
    android:padding="20dp">

    <!--IDs are same as in MainActivity for code reusability-->


    <RelativeLayout
        android:id="@+id/HUD_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/ring_playing_progress_bar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:indeterminate="false"
            android:progress="0"
            android:progressDrawable="@drawable/quiz_progress_ring"
            android:rotation="270"
            tools:progress="75" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/achievement_icon_image_view"
                android:layout_width="?android:attr/listPreferredItemHeight"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:src="@drawable/ach_ic_one_green"
                app:civ_border_color="@color/achievementBorderColor"
                app:civ_border_width="4dp"
                app:civ_circle_background_color="@color/quizBackgroundColor"
                android:elevation="@dimen/achievement_elevation"
                android:layout_margin="@dimen/achievement_margin"
                tools:targetApi="lollipop"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/quiz_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkTextColor"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                tools:text="16" />

        </LinearLayout>

        <ImageView
            android:id="@+id/pause_clickable_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:contentDescription="@string/pause_quiz_button_content_description"
            android:focusable="true"
            android:src="@drawable/ic_quiz_circle_pause"
            android:visibility="invisible" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/start_clickable_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/play_button_elevation_times_two"
        android:background="@drawable/quiz_round_button"
        android:clickable="true"
        android:contentDescription="@string/start_quiz_button_content_description"
        android:focusable="true"
        android:padding="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_play_arrow"
        android:translationZ="@dimen/play_button_elevation"
        android:visibility="visible" />


    <LinearLayout
        android:id="@+id/quiz_mode_three_all_answers_list_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/HUD_parent_layout"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="@drawable/background_elevated">

        <EditText
            android:id="@+id/quiz_mode_three_search_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="10"
            android:selectAllOnFocus="true"
            android:textColor="@color/darkTextColor" />

        <ListView
            android:id="@+id/quiz_mode_three_select_answer_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_quiz_mode_three_list" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/quiz_mode_three_submit_answer_clickable_layout"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/quiz_submit_answer_content_description"
            android:src="@drawable/ic_quiz_true" />

        <!--For showing click animation-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="?android:attr/selectableItemBackground" />

    </RelativeLayout>


</RelativeLayout>