<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quizBackgroundColor"
    android:padding="20dp">



    <ProgressBar
        android:id="@+id/ring_playing_progress_bar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="?android:progressBarStyleHorizontal"
        android:progress="0"
        tools:progress="75"
        android:progressDrawable="@drawable/quiz_progress_ring"
        android:indeterminate="false"
        android:rotation="270"/>

    <TextView
        android:id="@+id/quiz_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/darkTextColor"
        android:layout_marginLeft="20dp"
        tools:text="16"/>

    <ImageView
        android:id="@+id/pause_clickable_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_quiz_circle_pause"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/start_clickable_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:focusable="true"
        android:padding="60dp"
        android:contentDescription="@string/start_button_content_description"
        android:src="@drawable/ic_play_arrow"
        android:background="@drawable/quiz_round_button"
        android:visibility="visible"/>









    <LinearLayout
        android:id="@+id/four_options_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <!--For equal positioning-->
        <View
            android:layout_width="1px"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="2"/>

        <LinearLayout
            android:id="@+id/quiz_linear_layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>

            <RelativeLayout
                android:id="@+id/quiz_option_one_parent_layout"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:background="@drawable/background_quiz_mode"
                android:clickable="true"
                android:focusable="true">


                <LinearLayout
                    android:id="@+id/quiz_option_one_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--Between 1/2 and 1/3 of height is text size-->
                    <TextView
                        android:id="@+id/quiz_option_one_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text="@string/quiz_mode_two_option_one_title"/>

                    <TextView
                        android:id="@+id/quiz_option_one_description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text=""/>


                </LinearLayout>

                <!--For showing click animation-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="?android:attr/selectableItemBackground"/>

            </RelativeLayout>

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>

            <RelativeLayout
                android:id="@+id/quiz_option_two_parent_layout"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:background="@drawable/background_quiz_mode"
                android:clickable="true"
                android:focusable="true">


                <LinearLayout
                    android:id="@+id/quiz_option_two_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--Between 1/2 and 1/3 of height is text size-->
                    <TextView
                        android:id="@+id/quiz_option_two_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text="@string/quiz_mode_two_option_two_title"/>

                    <TextView
                        android:id="@+id/quiz_option_two_description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text=""/>


                </LinearLayout>

                <!--For showing click animation-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="?android:attr/selectableItemBackground"/>

            </RelativeLayout>

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>


        </LinearLayout>

        <!--For equal positioning-->
        <View
            android:layout_width="1px"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/quiz_linear_layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>

            <RelativeLayout
                android:id="@+id/quiz_option_three_parent_layout"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:background="@drawable/background_quiz_mode"
                android:clickable="true"
                android:focusable="true">


                <LinearLayout
                    android:id="@+id/quiz_option_three_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--Between 1/2 and 1/3 of height is text size-->
                    <TextView
                        android:id="@+id/quiz_option_three_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text="@string/quiz_mode_two_option_three_title"/>

                    <TextView
                        android:id="@+id/quiz_option_three_description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text=""/>


                </LinearLayout>

                <!--For showing click animation-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="?android:attr/selectableItemBackground"/>

            </RelativeLayout>

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>

            <RelativeLayout
                android:id="@+id/quiz_option_four_parent_layout"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:background="@drawable/background_quiz_mode"
                android:clickable="true"
                android:focusable="true">


                <LinearLayout
                    android:id="@+id/quiz_option_four_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!--Between 1/2 and 1/3 of height is text size-->
                    <TextView
                        android:id="@+id/quiz_option_four_title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text="@string/quiz_mode_two_option_four_title"/>

                    <TextView
                        android:id="@+id/quiz_option_four_description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:textSize="16dp"
                        android:text=""/>


                </LinearLayout>

                <!--For showing click animation-->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="?android:attr/selectableItemBackground"/>

            </RelativeLayout>

            <!--For equal positioning-->
            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:visibility="invisible"
                android:layout_weight="1"/>


        </LinearLayout>

        <!--For equal positioning-->
        <View
            android:layout_width="1px"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:layout_weight="2"/>


    </LinearLayout>



</RelativeLayout>